Small refactorings updated handling of checkboxes/radio elements fixed layout issue in main nav for chrome

--- a/less/320.less
+++ b/less/320.less
@@ -12,6 +12,7 @@
 
 	/* segments */
 	.halves > *, .half,
+	.half + *,
 	.thirds > *, .third,
 	.third + *,
 	.quarters > *, .quarter,
