--- a/less/480.less
+++ b/less/480.less
@@ -2,6 +2,7 @@
 	
 
 	.halves > *, .half,
+	.half + *,
 	.quarter, .third,
 	.quarter + *,
 	.third + *,
