--- a/less/forms.less
+++ b/less/forms.less
@@ -52,6 +52,13 @@ textarea{
 	margin: 0 0 2rem 0;
 }
 
+input[type="checkbox"],
+input[type="radio"] {
+	width: 1.25rem;
+	height: 1.25rem;
+	vertical-align: middle;
+}
+
 select{
 	height: auto;
 }
@@ -76,7 +83,7 @@ input:focus, textarea:focus, select:focus{
 	.box_drop_shadow(0px, 0px, 5px, @secondary_color_dark);
 }
 
-button, select{
+button, select, input{
 
 	cursor: pointer;
 }
