--- a/less/kanji.less
+++ b/less/kanji.less
@@ -45,13 +45,14 @@ body {
 
 		ul {
 			padding: 0;
-		}
 
-		ul li{
-			display: inline-block;
+			li{
+				display: inline;
+				padding: .25rem .5rem .25rem 0;
 
-			a{
-				display: block;
+				a{
+					display: inline-block;
+				}
 			}
 		}
 	}
@@ -59,6 +60,7 @@ body {
 	> footer{
 
 		clear: both;
+		width: 100%;
 		background: @primary_color_dark;
 		height: 5em;
 		padding-bottom: 0;
